# inflectived

./: .gitattributes  Cargo.toml  LICENSE
src/: database.rs  entry.rs  language.rs  main.rs  routes.rs  util.rs  version.rs  views.rs
static/: index.css  index.html  index.js
static/schemas/: Polish.json  Russian.json  polish.json
