[package]
name = "inflectived"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
#diesel = { version = "1.4.8", features = ["sqlite"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
reqwest = "0.11"
rusqlite = "0.25.3"
futures = "0.3"
config = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
